# wine_nn

./: README.md  main.ipynb  pyproject.toml  references.bib
