[project]
name = "wine-nn"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "certifi==2025.6.15",
    "filelock==3.18.0",
    "fsspec==2025.5.1",
    "ipykernel>=6.29.5",
    "jinja2==3.1.6",
    "markupsafe==3.0.2",
    "matplotlib>=3.9.4",
    "mpmath==1.3.0",
    "networkx==3.2.1",
    "numpy==2.0.2",
    "pandas==2.3.1",
    "python-dateutil==2.9.0.post0",
    "pytz==2025.2",
    "scikit-learn>=1.6.1",
    "six==1.17.0",
    "sympy==1.14.0",
    "torch==2.7.1",
    "typing-extensions==4.14.1",
    "tzdata==2025.2",
    "ucimlrepo==0.0.7",
]
